--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ snowflake-snowpark-python
 opentelemetry-api
 opentelemetry-sdk
 opentelemetry-exporter-gcp-trace
+opentelemetry-instrumentation-fastapi
 
 # Utilities
 python-dotenv
